--- a/src/PageTracker.API/PageTracker.API.csproj
+++ b/src/PageTracker.API/PageTracker.API.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+			<_Parameter1>PageTracker.Api.Tests</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
 </Project>
